[package]
name = "bip300301_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.29.0", features = ["all-keys", "sqlite"] }
ed25519-dalek = "2.1.1"
ed25519-dalek-bip32 = "0.3.0"

clap = { version = "4.5.2", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
bip39 = "2.0.0"
hex = "0.4.3"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }

rusqlite = "0.28.0"

tonic = "0.11.0"
prost = "0.12.4"
bs58 = { version = "0.5.1", features = ["check"] }

bip300301_enforcer_proto = { git = "https://github.com/LayerTwo-Labs/bip300301_enforcer_proto" }
bip300301_messages = { git = "https://github.com/LayerTwo-Labs/bip300301_messages" }
